--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-body{font-family:"Rounded Mplus 1c Regular"}
+html{background-color:azure}body{font-family:"Rounded Mplus 1c";box-shadow:0 0 20px 10px rgba(0,0,0,0.25)}
