右のアレを黒くしました

--- a/css/base.css
+++ b/css/base.css
@@ -111,3 +111,7 @@ button{
     margin-left: 10%;
     position: absolute;
 }
+
+#fp-nav ul li:hover .fp-tooltip, #fp-nav.fp-show-active a.active + .fp-tooltip {
+    color: #000;
+}
