--- a/web/css/base.css
+++ b/web/css/base.css
@@ -1,191 +1,213 @@
 @charset "utf-8";
-
-
-
-#top{
-	width: 30%;
-	top: 400px;
-	z-index:100;
-	position:fixed;
-	left:35%;
-	text-align:center;
-	padding:20px;
-	background-color:rgba(255,255,255,0.9);
-	border-radius:20px;
+#top {
+  width: 30%;
+  top: 400px;
+  z-index: 100;
+  position: fixed;
+  left: 35%;
+  text-align: center;
+  padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 20px;
 }
 
-
-
-#top_back{
-	padding:50px 0;
-	width:100%;
-	height:100vh;
-	z-index:10;
+#top_back {
+  padding: 50px 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
 }
 
-#mov{
-	background-color: #ffffff;
-	width:100%;
-	height:50px;
-	z-index:99;
-	bottom:2px;
-	position: fixed;
-	opacity:0.6;
+#mov {
+  background-color: #ffffff;
+  width: 100%;
+  height: 50px;
+  z-index: 99;
+  bottom: 2px;
+  position: fixed;
+  opacity: 0.6;
 }
 
-#mov>img{
-	width: 4%;
-	bottom: 10px;
-	z-index: 100;
-	position: fixed;
-	margin: 0 48%;
+#mov>img {
+  width: 4%;
+  bottom: 10px;
+  z-index: 100;
+  position: fixed;
+  margin: 0 48%;
 }
 
-
-
-#myMenu { margin: 0; position: fixed; left: 0; top: 0px; list-style-type: none; z-index: 70; background-color: #ffffff; padding-bottom: 5px; padding-top: 5px; width: 100%; opacity: 0.6;}
-#myMenu li { float: left; margin:  0 10px 0 0; font-size: 14px;}
-#myMenu li:first-child{ float: left; margin-left: 10%; font-size: 14px;}
-#myMenu a { float: left; padding: 10px 20px; background-color: #ffffff; color: #333; text-decoration: none;border: 1px solid #dddddd; border-radius:10px;}
-#myMenu.active a { color: #fff; background-color: #333;}
-
-h2{
-	font-weight: bold;
+#myMenu {
+  margin: 0;
+  position: fixed;
+  left: 0;
+  top: 0px;
+  list-style-type: none;
+  z-index: 70;
+  background-color: #ffffff;
+  padding-bottom: 5px;
+  padding-top: 5px;
+  width: 100%;
+  opacity: 0.6;
 }
 
-#hasira01{
-	background-color: orange;
-	opacity:0.4;
-	width: 10%;
-	height: 100vh;
-	float: left;
-    margin: auto;
-}
-#hasira02{
-	background-color:rgba(0,255,255,0.4);
-	width: 10%;
-	height: 100vh;
-	float: right;
+#myMenu li {
+  float: left;
+  margin: 0 10px 0 0;
+  font-size: 14px;
 }
 
-
-#hasira03{
-	background-color: rgba(141,255,20,0.4);
-	width: 10%;
-	height: 100vh;
-	float: left;
+#myMenu li:first-child {
+  float: left;
+  margin-left: 10%;
+  font-size: 14px;
 }
 
-#hasira04{
-	background-color: orange;
-	opacity:0.4;
-	width: 10%;
-	height: 100vh;
-	float: left;
+#myMenu a {
+  float: left;
+  padding: 10px 20px;
+  background-color: #ffffff;
+  color: #333;
+  text-decoration: none;
+  border: 1px solid #dddddd;
+  border-radius: 10px;
 }
 
-#hasira05{
-	background-color: rgba(0,255,255,0.4);
-	width: 10%;
-	height: 100vh;
-	float: left;
+#myMenu.active a {
+  color: #fff;
+  background-color: #333;
 }
 
-
-.box{
-    padding: 30px;
+h2 {
+  font-weight: bold;
 }
 
-
-
-
-p{
-    font-size: 18px;
+#hasira01 {
+  background-color: orange;
+  opacity: 0.4;
+  width: 10%;
+  height: 100vh;
+  float: left;
+  margin: auto;
 }
 
-.contain{
-	background-color:rgba(255,165,0,0.4);
+#hasira02 {
+  background-color: rgba(0, 255, 255, 0.4);
+  width: 10%;
+  height: 100vh;
+  float: right;
 }
 
-.container{
-    width: 80%;
-    margin: 0 auto;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 80px;
-	/*background-color:rgba(255,165,0,0.4);*/
-    
+#hasira03 {
+  background-color: rgba(141, 255, 20, 0.4);
+  width: 10%;
+  height: 100vh;
+  float: left;
 }
 
-button{
-    margin: 20px;
+#hasira04 {
+  background-color: orange;
+  opacity: 0.4;
+  width: 10%;
+  height: 100vh;
+  float: left;
 }
 
-#member{
-    width: 100%;
-    padding: 0;
+#hasira05 {
+  background-color: rgba(0, 255, 255, 0.4);
+  width: 10%;
+  height: 100vh;
+  float: left;
 }
 
-.who{
-    width: 14%;
-    margin: 20px;
-	float: left;
+.box {
+  padding: 30px;
 }
 
-.who > img{
-	width: 100%;
-	margin: 0 auto;
-}
-.who > p{
-	width: 100%;
-	margin: 10px auto;
+p {
+  font-size: 18px;
 }
 
-#twi{
-    width: 80%;
-	height:800px;
-    padding:200px 10%;
-    float: left;
+.contain {
+  background-color: rgba(255, 165, 0, 0.4);
 }
 
-#orange{
-    background-color: orange;
-    width: 90%;
-    height: 90vh;
-    z-index: 2;
-    top: 0;
-    left: 0;
-    position: absolute;
-    
+.container {
+  width: 80%;
+  margin: 0 auto;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 80px;
+  /*background-color:rgba(255,165,0,0.4);*/
 }
 
-#blue{
-    background-color: aqua;
-    width: 90%;
-    height: 90vh;
-    z-index: 1;
-    top: 10%;
-    margin-left: 10%;
-    position: absolute;
+button {
+  margin: 20px;
 }
 
-.box_cont{
-	width: 40%;
-	float: left;
-	margin: 20px;
+#member {
+  width: 100%;
+  padding: 0;
 }
 
-.box_cont>img{
-	width: 100%;
+.who {
+  width: 14%;
+  margin: 20px;
+  float: left;
 }
 
-.box_cont>p{
-	width: 90%;
-	margin: 10px auto;
+.who>img {
+  width: 100%;
+  margin: 0 auto;
 }
 
-.box_cont>button{
-	width: 100px;
-	margin: 10px auto;
+.who>p {
+  width: 100%;
+  margin: 10px auto;
 }
 
+#twi {
+  width: 80%;
+  height: 800px;
+  padding: 200px 10%;
+  float: left;
+}
+
+#orange {
+  background-color: orange;
+  width: 90%;
+  height: 90vh;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  position: absolute;
+}
+
+#blue {
+  background-color: aqua;
+  width: 90%;
+  height: 90vh;
+  z-index: 1;
+  top: 10%;
+  margin-left: 10%;
+  position: absolute;
+}
+
+.box_cont {
+  width: 40%;
+  float: left;
+  margin: 20px;
+}
+
+.box_cont>img {
+  width: 100%;
+}
+
+.box_cont>p {
+  width: 90%;
+  margin: 10px auto;
+}
+
+.box_cont>button {
+  width: 100px;
+  margin: 10px auto;
+}
