--- a/web_new/bootstrap/bootstrap.css
+++ b/web_new/bootstrap/bootstrap.css
@@ -3286,7 +3286,7 @@ fieldset[disabled] .btn-info.focus {
 }
 .btn-warning {
   color: #fff;
-  background-color: #f0ad4e;
+  background-color: #FF9200;
   border-color: #eea236;
 }
 .btn-warning:focus,
