--- a/c_team/app/views/shared/_footer.html.erb
+++ b/c_team/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer">
-  <small>ギフト家</small>
+  <small>松永プロジェクト2017</small>
   <nav>
     <ul>
       <li><%= link_to 'このサイトについて', about_path %></li>
