--- a/web_new/main.css
+++ b/web_new/main.css
@@ -91,6 +91,11 @@
 	}
 
 	/*プロジェクト概要について*/
+	#project{
+		margin-top: -5px;
+		padding-top: 5px;
+	}
+	
 	#project > h2{
 		width: 45%;
 		font-size: 50px;
@@ -117,7 +122,8 @@
 
 	#contents{
 		margin-bottom: 400px;
-
+		margin-top: -5px;
+		padding-top: 5px;
 	}
 	
 	#contents > h2{
@@ -148,7 +154,7 @@
 	/*メンバー紹介*/
 
 	#member > h2{
-		margin-top: 400px;
+		margin-top: 0px;
 		width: 40%;
 		position: static;
 	}
@@ -157,7 +163,8 @@
 		position: absolute;
 		width: 100%;
 		margin-bottom: 100px;
-		
+		margin-top: 400px;
+		padding-top: 100px;
 	}
 
 	.members{
@@ -180,16 +187,17 @@
 	/*ニュース*/
 
 	#news > h2{
-		position: static;]
+		position: static;
 		width: 35%;
 	}
 
 	#news{
 		position: absolute;
 		width: 100%;
-		margin-top: 3700px;
+		margin-top: 3800px;
 		margin-bottom: 1000px;
 		clear: both;
+		padding-top: -100px;
 	}
 
 	#newses > p{
@@ -300,9 +308,6 @@
 		width: 400px;
 	}
 
-
-
-
 	#title > h3{
 		padding-top: 200px;
 	}
@@ -316,6 +321,19 @@
 
 
 	/*プロジェクト概要について*/
+	#project{
+		margin-top: -20px;
+		padding-top: 20px;
+	}
+	
+	#project > h2{
+		width: 20%;
+		font-size: 30px;
+		background-color: #FF9200;
+		color: white;
+		padding: 10px;
+		margin: 80px 0;
+	}
 
 	.contain{
 		width: 80%;
@@ -334,9 +352,13 @@
 
 	#contents{
 		margin-bottom: 400px;
-
+		margin-top: -20px;
+		padding-top: 20px;
 	}
-
+	
+	#contents > h2{
+		width: 20%;
+	}
 	.product{
 		width: 30%;
 		border: 4px solid #FF9200;
@@ -393,7 +415,7 @@
 	#news{
 		position: absolute;
 		width: 100%;
-		margin-top: 2500px;
+		margin-top: 2200px;
 		margin-bottom: 400px;
 		clear: both;
 	}
@@ -418,7 +440,7 @@
 		position: absolute;
 		width: 100%;
 		height: 40px;
-		margin-top: 4200px;
+		margin-top: 3800px;
 		margin-bottom: 0;
 		padding-bottom: 0;
 		clear: both;
