user認証をemailからユーザ名に変更

--- a/c_team/app/views/admin/users/_form.html.erb
+++ b/c_team/app/views/admin/users/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="form-group">
-  <%= f.label :email, class: 'control-label col-md-2' %>
+  <%= f.label :name, class: 'control-label col-md-2' %>
   <div class="col-md-12">
-    <%= f.email_field :email, class: 'form-control' %>
+    <%= f.text_field :name, class: 'form-control' %>
   </div>
 </div>
 
