--- a/c_team/app/views/shared/_login_form.html.erb
+++ b/c_team/app/views/shared/_login_form.html.erb
@@ -1,7 +1,7 @@
 <div>
   <h1>ログイン</h1>
   <%= form_tag :login, method: :post do %>
-    <%= text_field_tag 'email' %>
+    <%= text_field_tag 'name' %>
     <%= password_field_tag 'password' %>
     <%= submit_tag 'ログイン', class: 'btn btn-primary' %>
   <% end %>
