--- a/c_team/app/views/users/_form.html.erb
+++ b/c_team/app/views/users/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="form-group">
-  <%= f.label :email, class: 'control-label' %>
-  <%= f.email_field :email, class: 'form-control' %>
+  <%= f.label :name, class: 'control-label' %>
+  <%= f.text_field :name, class: 'form-control' %>
 </div>
 
 <div class="form-group">
