--- a/c_team/app/views/stages/demo.html.erb
+++ b/c_team/app/views/stages/demo.html.erb
@@ -1,3 +1,4 @@
 <div class="stage">
-    <%= javascript_include_tag 'stage/demo/demo' %>
+  <%= javascript_include_tag 'stage/demo/demo' %>
+  <%= form_tag demo2_path, id: :demo %>
 </div>
