ゲーム画面サイズ固定化

--- a/c_team/app/views/stages/demo.html.erb
+++ b/c_team/app/views/stages/demo.html.erb
@@ -1,4 +1,4 @@
-<div class="stage">
+<div id="enchant-stage">
   <%= javascript_include_tag 'stage/demo/demo' %>
   <%= form_tag demo2_path, id: :demo %>
 </div>
