--- a/web_new/css/menu.css
+++ b/web_new/css/menu.css
@@ -1,220 +1,35 @@
 @charset "UTF-8";
-/* CSS Document */
-
-
-@media screen and (orientation: portrait) {
-  #menu-box{
-    position: fixed;
-    width: 100%;
-    max-width: 2400px;
-    z-index: 999;
-    bottom: 0;
-  }
-
-  #menu{
-    width: 100%;
-    max-width: 2400px;
-    margin: 60px auto;
-    padding: 0;
-  }
-  
-  #menu li{
-    display: block;
-    float: left;
-    width: 20%;
-    height :150px;
-    margin: 0;
-    padding: 0;
-    border: 4px solid #35D1FF;
-    border-bottom: none;
-    border-left: none;
-    background: #fff;
-  }
-  
-  #menu li a{
-    display: block;
-    padding: 12px 0 10px;
-    background: #fff;
-    color: #35D1FF;
-    text-align: center;
-    text-decoration: none;
-    font-size: 40px;
-    font-weight: bold;
-  }
-  #menu li a:hover{
-    background: #35D1FF;
-    color:#fff;
-  }
-  
-  #menu li:hover{
-    background: #35D1FF;
-  }
-  
-  #toggle{ 
-   display: none;
-  }
-  @media only screen and (max-width: 768px) {
-    #menu li{
-    width: 25%;
-    border-bottom: 1px solid #444;
-    }
-  }
-  @media only screen and (max-width: 480px) {
-    #menu{
-    display: none;
-    }
-    #menu li{
-    width: 100%;
-    }
-    #toggle{
-    display: block;
-    position: relative;
-    width: 100%;
-    background: #222;
-    }
-    #toggle a{
-    display: block;
-    position: relative;
-    padding: 12px 0 10px;
-    border-bottom: 1px solid #444;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    }
-    #toggle:before{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    background: #fff;
-    }
-    #toggle a:before, #toggle a:after{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 4px;
-    background: #222;
-    }
-    #toggle a:before{
-    margin-top: -6px;
-    }
-    #toggle a:after{
-    margin-top: 2px;
-    }
-  }
-  
+nav {
+  position: fixed;
+  height: 55px;
 }
-
-
-
-@media screen and (orientation: landscape) {
-  #menu-box{
-    position: fixed;
-    width: 100%;
-    max-width: 2400px;
-    z-index: 999;
-  }
-
-
-  #menu{
-    width: 100%;
-    max-width: 2400px;
-    margin: 60px auto;
-    padding: 0;
-
-
-  }
-  #menu li{
-    display: block;
-    float: left;
-    width: 20%;
-    margin: 0;
-    padding: 0;
-    border: 2px solid #94E3F7;
-    border-top: none;
-    border-left: none;
-  }
-  #menu li a{
-    display: block;
-    padding: 12px 0 10px;
-    background: #fff;
-    color: #94E3F7;
-    text-align: center;
-    text-decoration: none;
-    font-size: 25px;
-    font-weight: bold;
-  }
-  #menu li a:hover{
-    background: #94E3F7;
-    color:#fff;
-  }
-  #toggle{ 
-   display: none;
-  }
-  @media only screen and (max-width: 768px) {
-    #menu li{
-    width: 25%;
-    border-bottom: 1px solid #444;
-    }
-  }
-  @media only screen and (max-width: 480px) {
-    #menu{
-    display: none;
-    }
-    #menu li{
-    width: 100%;
-    }
-    #toggle{
-    display: block;
-    position: relative;
-    width: 100%;
-    background: #222;
-    }
-    #toggle a{
-    display: block;
-    position: relative;
-    padding: 12px 0 10px;
-    border-bottom: 1px solid #444;
-    color: #fff;
-    text-align: center;
-    text-decoration: none;
-    }
-    #toggle:before{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    background: #fff;
-    }
-    #toggle a:before, #toggle a:after{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 4px;
-    background: #222;
-    }
-    #toggle a:before{
-    margin-top: -6px;
-    }
-    #toggle a:after{
-    margin-top: 2px;
-    }
-  }
+nav ul {
+  padding: 0;
 }
-
-
-
+nav ul li {
+  display: block;
+  width: 20%;
+  float: left;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
+  border: solid 2px #94E3F7;
+}
+nav ul li a {
+  display: block;
+  padding: 5px;
+  text-align: center;
+  color: #94E3F7;
+  font-weight: bold;
+  font-size: 28px;
+  transition: all .25s linear;
+}
+nav ul li a:hover {
+  background-color: #94E3F7;
+  color: #fff;
+  text-decoration: none;
+}
+nav ul li a.active {
+  background-color: #94E3F7;
+  color: #fff;
+}
