--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -16,10 +16,10 @@ header {
   background-color: #94E3F7;
   padding-bottom: 5px;
 }
-div#start {
+div.button-orange {
   padding: 10px;
 }
-div#start p {
+div.button-orange p {
   background-color: orange;
   font-size: 40px;
   color: #fff;
@@ -29,7 +29,7 @@ div#start p {
   text-align: center;
   margin: auto;
 }
-div#start::before {
+div.button-orange::before {
   position: absolute;
   width: 100%;
   x: -10;
