--- a/web_new/css/menu.css
+++ b/web_new/css/menu.css
@@ -13,27 +13,27 @@ nav ul li {
   margin: 0;
   padding: 0;
   background-color: #fff;
-  border: solid 2px #94E3F7;
+  border: solid 2px #9CF;
   border-left: none;
 }
 nav ul li a {
   display: block;
   padding: 5px;
   text-align: center;
-  color: #94E3F7;
+  color: #9CF;
   font-weight: bold;
   font-size: 28px;
   transition: all .25s linear;
 }
 nav ul li a:hover {
-  background-color: #94E3F7;
+  background-color: #9CF;
   color: #fff;
   text-decoration: none;
 }
 nav ul li a.active {
-  background-color: #94E3F7;
+  background-color: #9CF;
   color: #fff;
 }
 nav ul li:first-child {
-  border-left: solid 2px #94E3F7;
+  border-left: solid 2px #9CF;
 }
