--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -1,20 +1,66 @@
 @charset "utf-8";
+@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 * {
+  font-family: "Noto Sans JP";
   margin: 0;
   padding: 0;
 }
 body {
   padding-top: 55px;
 }
+h1 {
+  font-size: 45px;
+}
 h2 {
   display: block;
+  position: relative;
+  font-size: 30px;
+  color: #fff;
   background-color: #f90;
-  width: 20%;
+  width: 400px;
   padding: 10px;
+  overflow: hidden;
+}
+h3 {
+  text-align: center;
+  width: auto;
+  border-bottom: 2px dashed #f90;
+}
+p {
+  font-size: 20px;
+}
+img {
+  display: block;
+  width: 100%;
+  margin: auto;
 }
 header {
   background-color: #9CF;
   padding-bottom: 5px;
+  padding-top: 60px;
+}
+header h3 {
+  width: auto;
+  text-align: center;
+  border: none;
+}
+.member-data {
+  padding: 10px;
+}
+.member-data p {
+  text-align: center;
+}
+.member-photo {
+  display: block;
+  max-width: 250px;
+  height: auto;
+  margin: auto;
+  margin-bottom: 10px;
+}
+footer p {
+  margin: 50px;
+  font-size: 15px;
+  text-align: center;
 }
 div.button-orange {
   padding: 10px;
