チュートリアル1作成

--- a/c_team/app/views/stages/tutorial1.html.erb
+++ b/c_team/app/views/stages/tutorial1.html.erb
@@ -1,6 +1,6 @@
-<% @page_title = 'demo' %>
+<% @page_title = 'チュートリアル1' %>
 
 <div id="enchant-stage">
-  <%= javascript_include_tag 'stage/demo/demo' %>
+  <%= javascript_include_tag 'stage/tutorial1/tutorial1' %>
 </div>
 <%= form_tag demo2_path, id: :demo %>
