--- a/c_team/app/views/stages/novel.html.erb
+++ b/c_team/app/views/stages/novel.html.erb
@@ -1,3 +1,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/novel/novel' %>
 </div>
+<%= form_tag demo_path, id: :novel, method: :get %>
