マージ作業: demoからtutorialにpathを書き換え

--- a/c_team/app/views/stages/novel.html.erb
+++ b/c_team/app/views/stages/novel.html.erb
@@ -1,4 +1,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/novel/novel' %>
 </div>
-<%= form_tag demo_path, id: :novel, method: :get %>
+<%= form_tag tutorial_path, id: :novel, method: :get %>
