postメソッドからgetメソッドに変更

--- a/c_team/app/views/stages/tutorial2.html.erb
+++ b/c_team/app/views/stages/tutorial2.html.erb
@@ -3,4 +3,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial2/tutorial2' %>
 </div>
-<%= form_tag tutorial3_path, id: :tutorial2 %>
+<%= form_tag tutorial3_path, id: :tutorial2, method: :get %>
