タイトルテキストの色変更, プロジェクト概要の表示修正

--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -42,10 +42,9 @@ header img {
   max-width: 300px;
   height: auto;
 }
+header h1,
 header h3 {
-  width: auto;
-  text-align: center;
-  border: none;
+  color: #666;
 }
 .member-data {
   border: 2px solid #f90;
