--- a/c_team/app/views/stages/tutorial1.html.erb
+++ b/c_team/app/views/stages/tutorial1.html.erb
@@ -3,4 +3,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial1/tutorial1' %>
 </div>
-<%= form_tag tutorial2_path, id: :tutorial1, method: :get %>
+<%= form_tag tutorial2_novel_path, id: :tutorial1, method: :get %>
