コシタック=サンの意見を少し反映

--- a/web_new/css/menu.css
+++ b/web_new/css/menu.css
@@ -38,3 +38,8 @@ nav ul li a.active {
 nav ul li:first-child {
   border-left: solid 2px #94E3F7;
 }
+@media screen and (max-width: 991px) {
+  nav {
+    height: 100px;
+  }
+}
