--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -2,8 +2,6 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 * {
   font-family: "Noto Sans JP";
-  margin: 0;
-  padding: 0;
 }
 body {
   padding-top: 55px;
@@ -13,7 +11,6 @@ h1 {
 }
 h2 {
   display: block;
-  position: relative;
   font-size: 30px;
   color: #fff;
   background-color: #f90;
@@ -32,6 +29,12 @@ img {
   display: block;
   width: 100%;
   margin: auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.content-border {
+  border: 5px solid #f90;
+  padding: 20px;
 }
 header {
   background-color: #94E3F7;
@@ -39,7 +42,7 @@ header {
   padding-top: 60px;
 }
 header img {
-  max-width: 300px;
+  max-width: 400px;
   height: auto;
 }
 header h1,
@@ -47,9 +50,7 @@ header h3 {
   color: #666;
 }
 .member-data {
-  border: 2px solid #f90;
   margin-bottom: 30px;
-  padding: 10px;
 }
 .member-data p {
   text-align: center;
@@ -68,11 +69,14 @@ header h3 {
   margin: auto;
   margin-bottom: 10px;
 }
+.tw-timeline {
+  width: 100%;
+  height: 400px;
+}
 footer {
-  background-color: #94E3F7;
+  margin-top: 30px;
 }
 footer p {
-  margin: 50px;
   font-size: 15px;
   text-align: center;
 }
