--- a/c_team/app/views/stages/tutorial3.html.erb
+++ b/c_team/app/views/stages/tutorial3.html.erb
@@ -3,4 +3,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial3/tutorial3' %>
 </div>
-<%= form_tag stages_path, id: :tutorial3, method: :get %>
+<%= form_tag tutorial3A_novel_path, id: :tutorial3, method: :get %>
