ボタンの入れ替え, ナビゲーションの色調整

--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -32,6 +32,10 @@ img {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+img.nav-triangle {
+  margin: 50px auto 50px;
+  width: 100px;
+}
 .content-border {
   border: 5px solid #f90;
   padding: 20px;
