--- a/c_team/app/views/stages/index.html.erb
+++ b/c_team/app/views/stages/index.html.erb
@@ -1,1 +1,3 @@
-<%= link_to 'チュートリアル', tutorial1_novel_path %>
+<p><%= link_to 'チュートリアル', tutorial1_novel_path %></p>
+
+<p><%= link_to '本編', intro_novel_path %></p>
