--- a/web_new/css/_main.css
+++ b/web_new/css/_main.css
@@ -82,11 +82,13 @@ h2 {
   color: #777;
 }
 .head img {
-  width: 400px;
+  width: 200px;
+  border: 2px solid #65d7f3;
 }
 .head img.triangle {
   width: 100px;
   margin: 50px auto 50px;
+  border: none;
   cursor: pointer;
 }
 .flex-box {
@@ -127,7 +129,7 @@ div.flex-box .content {
   margin-bottom: 20px;
 }
 .teacher-data {
-  flex-basis: 300px;
+  flex-basis: 225px;
   flex-shrink: 0;
   text-align: center;
   padding: 20px;
@@ -145,6 +147,14 @@ div.flex-box .content {
 .twitter {
   max-width: 500px;
 }
+.twitter p {
+  display: block;
+  width: 100%;
+  text-align: left;
+  color: #f90;
+  font-size: 25px;
+  font-weight: bold;
+}
 footer {
   text-align: center;
   color: #000;
@@ -153,8 +163,7 @@ footer {
 @media screen and (max-width: 600px) {
   .content,
   .member,
-  .flex-box,
-  .member {
+  .flex-box {
     width: 100%;
     border-left-width: 0px;
     border-right-width: 0px;
@@ -173,6 +182,9 @@ footer {
     border: 5px solid #f90;
     margin-bottom: 20px;
   }
+  .teacher-data img {
+    display: none;
+  }
   .member-data {
     flex-basis: 250px;
     flex-basis: 160px;
@@ -186,7 +198,16 @@ footer {
     display: none;
   }
   .twitter {
-    border-left-width: 5px;
-    border-right-width: 5px;
+    max-width: none;
+  }
+}
+@media screen and (max-width: 740px) {
+  div.flex-box {
+    flex-wrap: wrap;
+    align-items: baseline;
+  }
+  div.flex-box .content {
+    flex-basis: 100%;
+    flex-shrink: 0;
   }
 }
