--- a/c_team/app/views/stages/tutorial1.html.erb
+++ b/c_team/app/views/stages/tutorial1.html.erb
@@ -1,5 +1,20 @@
 <% @page_title = 'チュートリアル1' %>
 
+<% content_for :stage_header do %>
+  <p id="story">チュートリアル1</p>
+  <p id="mis">ミッション：主人公をゴールに届けよう!!</p>
+<% end %>
+
+<div id="motion">
+  <div id="puzz">
+    <h3>〜動き方〜</h3>
+  </div>
+  <div id="help">
+    <h3>〜ヘルプ〜</h3>
+    <div class="balloon">ここはこうするとええのよ</div>
+  </div>
+</div>
+
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial1/tutorial1' %>
 </div>
