--- a/web_new/css/_main.css
+++ b/web_new/css/_main.css
@@ -1,213 +1,137 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 * {
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0;
   font-family: "Noto Sans JP";
-  box-sizing: border-box;
 }
-body {
-  background-color: #FFF;
+h1 {
+  font-size: 45px;
+}
+h2 {
+  display: block;
+  overflow: hidden;
+  width: 350px;
+  padding: 5px;
+  color: #fff;
+  background-color: #f90;
+  font-size: 30px;
+}
+h3 {
+  width: auto;
+  text-align: center;
+}
+p {
   font-size: 20px;
 }
 img {
   display: block;
   max-width: 100%;
-  margin: auto;
 }
-img.triangle {
+.triangle {
   width: 100px;
   margin: 50px auto 50px;
-  cursor: pointer;
 }
-img.diamond {
-  max-width: 250px;
-  margin: auto;
-  margin-bottom: 30px;
+.diamond {
+  width: 350px;
+  margin: 50px auto 50px;
 }
-.cl-header {
-  height: auto;
-  padding-top: 60px;
-  text-align: center;
-  color: #555;
-  background-color: #94E3F7;
+.logo {
+  width: 200px;
+  margin: 25px auto 25px;
+  border: 3px solid #35caf0;
 }
-header {
+nav {
+  position: fixed;
   display: flex;
-  justify-content: center;
+  overflow: hidden;
+  width: 100%;
   height: 55px;
-  margin: 0px;
-  padding: 0px;
-  background-color: transparent;
-}
-header a {
-  flex: 1;
   text-align: center;
+  font-size: 35px;
   background-color: #FFF;
 }
-header a.nav-bt {
-  padding: 5px;
+nav a {
+  flex: 1 1 250px;
   color: #94E3F7;
   border: 2px solid #94E3F7;
-  border-right-width: 0px;
   background-color: #FFF;
-  font-size: 25px;
 }
-header a.nav-bt:last-child {
-  border-right-width: 2px;
+nav a:nth-child(2) {
+  display: none;
 }
-header a.nav-bt:hover {
-  color: #FFF;
-  background-color: #94E3F7;
-}
-@media screen and (max-width: 600px) {
-  header a:first-child {
-    display: none;
-  }
-}
-h2 {
-  width: 300px;
-  margin: 0px;
-  padding: 5px 15px 5px;
-  color: #FFF;
-  background-color: #f90;
-}
-.head {
-  margin-bottom: 50px;
-  padding-top: 60px;
-  padding-bottom: 15px;
+header {
+  margin-bottom: 20px;
+  padding: 60px 0px 5px 0px;
   text-align: center;
   background-color: #94E3F7;
 }
-.head h1,
-.head h3 {
-  color: #777;
-}
-.head img {
-  width: 200px;
-  border: 2px solid #65d7f3;
-}
-.head img.triangle {
-  width: 100px;
-  margin: 50px auto 50px;
-  border: none;
-  cursor: pointer;
+header h1,
+header h3 {
+  color: #666;
 }
 .flex-box {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   width: 80%;
-  margin: auto;
-  margin: 10px auto 80px auto;
-  padding: 15px;
-  border: 5px solid #f90;
+  margin: 40px auto;
 }
 .content {
   width: 80%;
-  margin: 10px auto 80px auto;
+  margin: 40px auto;
   padding: 15px;
   border: 5px solid #f90;
 }
-div.flex-box .content {
-  flex: 1;
-  margin: auto;
-  border: none;
-}
-.member {
-  display: flex;
-  justify-content: space-around;
-  width: 80%;
-  margin: auto;
-  margin: 10px auto 80px auto;
-  padding: 15px;
-  border: 5px solid #f90;
-  border: none;
-  flex-wrap: wrap;
+.flex-box .content {
+  flex: 1 1 400px;
+  margin: 20px 10px;
 }
 .personal-data {
-  text-align: center;
-  padding: 20px;
-  border: 5px solid #f90;
+  flex-basis: 200px;
   margin-bottom: 20px;
-}
-.teacher-data {
-  flex-basis: 225px;
-  flex-shrink: 0;
+  padding: 15px;
   text-align: center;
-  padding: 20px;
   border: 5px solid #f90;
-  margin-bottom: 20px;
-}
-.member-data {
-  flex-basis: 225px;
-  flex-shrink: 0;
-  text-align: center;
-  padding: 20px;
-  border: 5px solid #f90;
-  margin-bottom: 20px;
 }
 .twitter {
-  max-width: 500px;
-}
-.twitter p {
-  display: block;
-  width: 100%;
-  text-align: left;
-  color: #f90;
-  font-size: 25px;
-  font-weight: bold;
+  width: 400px;
 }
 footer {
   text-align: center;
-  color: #000;
-  background-color: inherit;
 }
-@media screen and (max-width: 600px) {
-  .content,
-  .member,
-  .flex-box {
-    width: 100%;
-    border-left-width: 0px;
-    border-right-width: 0px;
+@media screen and (max-width: 768px) {
+  nav {
+    background-color: #FFF;
+  }
+  .diamond {
+    width: 250px;
   }
   .personal-data {
-    text-align: center;
-    padding: 20px;
-    border: 5px solid #f90;
-    margin-bottom: 20px;
+    flex: 0 0 150px;
   }
-  .teacher-data {
-    flex-basis: 300px;
-    flex-shrink: 0;
-    text-align: center;
-    padding: 20px;
-    border: 5px solid #f90;
-    margin-bottom: 20px;
-  }
-  .teacher-data img {
+  .personal-data img {
     display: none;
-  }
-  .member-data {
-    flex-basis: 250px;
-    flex-basis: 160px;
-    flex-shrink: 0;
-    text-align: center;
-    padding: 20px;
-    border: 5px solid #f90;
-    margin-bottom: 20px;
-  }
-  .member-data img {
-    display: none;
-  }
-  .twitter {
-    max-width: none;
   }
 }
-@media screen and (max-width: 740px) {
-  div.flex-box {
-    flex-wrap: wrap;
-    align-items: baseline;
+@media screen and (max-width: 425px) {
+  nav {
+    flex-flow: column;
+    overflow: visible;
   }
-  div.flex-box .content {
-    flex-basis: 100%;
-    flex-shrink: 0;
+  nav a:nth-child(n+2) {
+    display: none;
+    text-align: left;
+    font-size: 30px;
+  }
+  .flex-box,
+  .content,
+  .twitter {
+    width: inherit;
+    margin: inherit 0px inherit;
+  }
+  .flex-box .content {
+    flex: 1 1 200px;
   }
 }
