--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -1,111 +1,139 @@
-@charset "utf-8";
+@charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
 * {
+  box-sizing: content-box;
+  margin: 0;
+  padding: 0;
   font-family: "Noto Sans JP";
-}
-body {
-  padding-top: 55px;
 }
 h1 {
   font-size: 45px;
 }
 h2 {
   display: block;
-  font-size: 30px;
+  overflow: hidden;
+  width: 350px;
+  padding: 5px;
   color: #fff;
   background-color: #f90;
-  width: 350px;
-  padding: 10px;
-  overflow: hidden;
+  font-size: 30px;
 }
 h3 {
-  text-align: center;
   width: auto;
+  text-align: center;
 }
 p {
   font-size: 20px;
 }
 img {
   display: block;
-  width: 100%;
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  max-width: 100%;
 }
-img.nav-triangle {
-  margin: 50px auto 50px;
+.triangle {
   width: 100px;
+  margin: 50px auto 50px;
+  cursor: pointer;
 }
-.content-border {
-  border: 5px solid #f90;
-  padding: 20px;
+.diamond {
+  width: 350px;
+  margin: 50px auto 50px;
+}
+.logo {
+  width: 200px;
+  margin: 25px auto 25px;
+  border: 3px solid #35caf0;
+}
+nav {
+  position: fixed;
+  display: flex;
+  overflow: hidden;
+  width: 100%;
+  height: 55px;
+  text-align: center;
+  background-color: #FFF;
+  font-size: 35px;
+}
+nav a {
+  flex: 1 1 250px;
+  cursor: pointer;
+  color: #94E3F7;
+  border: 2px solid #94E3F7;
+  background-color: #FFF;
+}
+nav a:nth-child(2) {
+  display: none;
 }
 header {
+  margin-bottom: 20px;
+  padding: 60px 0px 5px 0px;
+  text-align: center;
   background-color: #94E3F7;
-  padding-bottom: 5px;
-  padding-top: 60px;
-}
-header img {
-  max-width: 400px;
-  height: auto;
 }
 header h1,
 header h3 {
   color: #666;
 }
-.product {
-  margin-bottom: 30px;
+.flex-box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: 80%;
+  margin: 40px auto;
 }
-.member-data {
-  margin-bottom: 30px;
+.content {
+  width: 80%;
+  margin: 40px auto;
+  padding: 15px;
+  border: 5px solid #f90;
 }
-.member-data p {
+.flex-box .content {
+  flex: 1 1 400px;
+  margin: 20px 10px;
+}
+.personal-data {
+  flex-basis: 200px;
+  margin-bottom: 20px;
+  padding: 15px;
   text-align: center;
+  border: 5px solid #f90;
 }
-.if_icon {
-  display: block;
-  max-width: 250px;
-  height: auto;
-  margin: auto;
-  margin-bottom: 30px;
-}
-.member-photo {
-  display: block;
-  max-width: 250px;
-  height: auto;
-  margin: auto;
-  margin-bottom: 10px;
-}
-.tw-timeline {
-  width: 100%;
-  height: 400px;
+.twitter {
+  width: 400px;
 }
 footer {
-  margin-top: 30px;
-}
-footer p {
-  font-size: 15px;
   text-align: center;
 }
-div.button-orange {
-  padding: 15px;
+@media screen and (max-width: 768px) {
+  nav {
+    background-color: #FFF;
+  }
+  .diamond {
+    width: 250px;
+  }
+  .personal-data {
+    flex: 0 0 150px;
+  }
+  .personal-data img {
+    display: none;
+  }
 }
-div.button-orange p {
-  background-color: #f90;
-  font-size: 40px;
-  color: #fff;
-  width: 150px;
-  border-radius: 10px 10px;
-  border: 2px solid #f90;
-  text-align: center;
-  margin: auto;
-}
-.text-center {
-  text-align: center;
-}
-.position-center {
-  margin: auto;
-}
-.display-block {
-  display: block;
+@media screen and (max-width: 425px) {
+  nav {
+    flex-flow: column;
+    overflow: visible;
+  }
+  nav a:nth-child(n+2) {
+    display: none;
+    text-align: left;
+    font-size: 30px;
+  }
+  .flex-box,
+  .content,
+  .twitter {
+    width: inherit;
+    margin: inherit 0px inherit;
+  }
+  .flex-box .content {
+    flex: 1 1 200px;
+  }
 }
