--- a/web_new/css/main.css
+++ b/web_new/css/main.css
@@ -1,159 +1,1 @@
-@charset "UTF-8";
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);
-* {
-  box-sizing: content-box;
-  margin: 0;
-  padding: 0;
-  font-family: "Noto Sans JP", sans-serif;
-}
-h1 {
-  font-size: 45px;
-}
-h2 {
-  display: block;
-  overflow: hidden;
-  width: 350px;
-  padding: 5px;
-  color: #fff;
-  background-color: #f90;
-  font-size: 30px;
-}
-h3 {
-  width: auto;
-  text-align: center;
-}
-p {
-  font-size: 20px;
-}
-img {
-  display: block;
-  margin: auto;
-  max-width: 100%;
-}
-.triangle {
-  width: 100px;
-  margin: 50px auto 50px;
-  cursor: pointer;
-}
-.diamond {
-  width: 350px;
-  margin: 50px auto 50px;
-}
-.logo {
-  width: 200px;
-  margin: 25px auto 25px;
-  border: 3px solid #35caf0;
-}
-nav {
-  position: fixed;
-  display: flex;
-  overflow: hidden;
-  width: 100%;
-  height: 55px;
-  text-align: center;
-  background-color: #FFF;
-  font-size: 35px;
-}
-nav a {
-  flex: 1 1 250px;
-  cursor: pointer;
-  color: #94E3F7;
-  border: 2px solid #94E3F7;
-  background-color: #FFF;
-}
-nav a:nth-child(2) {
-  display: none;
-}
-header {
-  margin-bottom: 20px;
-  padding: 160px 0px 5px 0px;
-  text-align: center;
-  background-color: #94E3F7;
-}
-header h1,
-header h3 {
-  color: #8f8f8f;
-}
-.flex-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  width: 85%;
-  margin: 40px auto;
-}
-.content {
-  width: 80%;
-  margin: 40px auto;
-  padding: 15px;
-  text-align: center;
-  border: 5px solid #f90;
-}
-.flex-box .content {
-  flex: 1 1 400px;
-  margin: 20px 10px;
-}
-.personal-data {
-  flex-basis: 250px;
-  margin-bottom: 20px;
-  padding: 15px;
-  text-align: center;
-  border: 5px solid #f90;
-}
-.twitter {
-  width: 500px;
-}
-footer {
-  text-align: center;
-}
-@media screen and (max-width: 768px) {
-  nav {
-    background-color: #FFF;
-  }
-  .diamond {
-    width: 250px;
-  }
-  .personal-data {
-    flex: 0 0 150px;
-  }
-  .personal-data img {
-    display: none;
-  }
-  .twitter {
-    width: 85%;
-  }
-}
-@media screen and (max-width: 425px) {
-  header {
-    padding-top: 30px;
-  }
-  h2 {
-    width: 100%;
-  }
-  nav {
-    overflow: visible;
-    flex-flow: column;
-  }
-  nav a:first-child::after {
-    position: absolute;
-    right: 10px;
-    bottom: 11px;
-    content: "\f0c9";
-    color: #94E3F7;
-    font-family: "FontAwesome";
-    font-size: 30px;
-  }
-  nav a:nth-child(n+2) {
-    display: none;
-    text-align: left;
-    font-size: 30px;
-  }
-  .flex-box,
-  .content,
-  .twitter {
-    width: inherit;
-    margin: inherit 0px inherit;
-  }
-  .flex-box .content {
-    flex: 1 1 200px;
-  }
-}
+@charset "UTF-8";@import url(http://fonts.googleapis.com/earlyaccess/notosansjp.css);*{box-sizing:content-box;margin:0;padding:0;font-family:"Helvetica Neue",Helvetica,Arial,sans-serif}h1{font-size:45px}h2{display:block;overflow:hidden;width:350px;padding:5px;color:#fff;background-color:#f90;font-size:30px}h3{width:auto;text-align:center}p{font-size:20px}img{display:block;margin:auto;max-width:100%}.triangle{width:100px;margin:50px auto 50px;cursor:pointer}.diamond{width:350px;margin:50px auto 50px}.logo{width:200px;margin:25px auto 25px;box-shadow:0 0 2px 5px #81def6}nav{position:fixed;display:flex;overflow:hidden;width:100%;height:55px;text-align:center;background-color:#FFF;font-size:25px}nav a{flex:1 1 250px;cursor:pointer;color:#94E3F7;border:2px solid #94E3F7;border-top-width:0;border-right-width:0;background-color:#FFF;transition:all .2s linear;padding:10px;font-weight:bold}nav a:hover{background-color:#94E3F7;color:#FFF}nav a:nth-child(2){display:none}nav a:last-child{border-right-width:2px}header{margin-bottom:20px;padding:160px 0 5px 0;text-align:center;background-color:#94E3F7}header h1,header h3{color:#8f8f8f}.flex-box{display:flex;flex-wrap:wrap;justify-content:space-around;width:85%;margin:40px auto}.left-flex{justify-content:left}.content{width:80%;margin:40px auto;padding:15px;text-align:center;border:5px solid #f90}.flex-box .content{flex:1 1 400px;margin:20px 10px}.personal-data{flex:0 0 200px;margin:10px 2px;padding:15px;text-align:center;border:5px solid #f90}.twitter{width:500px}footer{text-align:center}@media screen and (max-width:768px){nav{background-color:#FFF}nav a{border-right-width:2px}.diamond{width:250px}.personal-data{flex:0 0 150px;margin:10px 5px}.personal-data img{display:none}.twitter{width:85%}h2{box-sizing:border-box;width:100%}nav{overflow:visible;flex-flow:column}nav a:first-child::after{position:absolute;right:10px;bottom:11px;content:"\f0c9";color:#94E3F7;font-family:"FontAwesome";font-size:30px;transition:all .2s linear}nav a:hover::after{color:#35caf0}nav a:nth-child(n+2){display:none;text-align:left;font-size:30px}.flex-box,.content,.twitter{width:inherit;margin:inherit 0 inherit}.flex-box .content{flex:1 1 200px}}
