--- a/c_team/app/views/stages/tutorial2_novel.html.erb
+++ b/c_team/app/views/stages/tutorial2_novel.html.erb
@@ -1,3 +1,12 @@
+<% @page_title = 'チュートリアル2' %>
+
+<% content_for :stage_header do %>
+  <p id="story">チュートリアル2</p>
+<% end %>
+
+<div id="motion">
+</div>
+
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial2_novel/tutorial2_novel' %>
 </div>
