--- a/c_team/app/views/stages/tutorial3A_novel.html.erb
+++ b/c_team/app/views/stages/tutorial3A_novel.html.erb
@@ -1,3 +1,12 @@
+<% @page_title = 'チュートリアル3' %>
+
+<% content_for :stage_header do %>
+  <p id="story">チュートリアル3</p>
+<% end %>
+
+<div id="motion">
+</div>
+
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial3A_novel/tutorial3A_novel' %>
 </div>
