--- a/c_team/app/views/layouts/stage.html.erb
+++ b/c_team/app/views/layouts/stage.html.erb
@@ -12,5 +12,11 @@
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
   </head>
   <body>
+    <!-- ヘッダ -->
+    <%= render 'shared/header' %>
+    <!-- 本体 -->
+    <%= render 'shared/flash' %>
+    <%= yield %>
+    <%# render 'shared/footer' %>
   </body>
 </html>
