--- a/c_team/app/views/layouts/stage.html.erb
+++ b/c_team/app/views/layouts/stage.html.erb
@@ -13,10 +13,11 @@
   </head>
   <body>
     <!-- ヘッダ -->
-    <%= render 'shared/header' %>
+    <%= render 'shared/stage_header' %>
     <!-- 本体 -->
     <%= render 'shared/flash' %>
     <%= yield %>
+    <!-- フッタ -->
     <%# render 'shared/footer' %>
   </body>
 </html>
