画面モックアップをステージ導入に適用

--- a/c_team/app/views/stages/intro_novel.html.erb
+++ b/c_team/app/views/stages/intro_novel.html.erb
@@ -1,3 +1,12 @@
+<% @page_title = '小豆ちゃんのお見舞い' %>
+
+<% content_for :stage_header do %>
+  <p id="story">小豆ちゃんのお見舞い</p>
+<% end %>
+
+<div id="motion">
+</div>
+
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/intro_novel/intro_novel' %>
 </div>
