bootstrapテーマHonokaを適用

--- a/c_team/app/assets/stylesheets/application.scss
+++ b/c_team/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-sprockets";
-@import "bootstrap";
+@import "honoka";
 
 $font: -apple-system, BlinkMacSystemFont, 'Helvetica Neue', 'Hiragino Sans', 'Hiragino Kaku Gothic ProN', '游ゴシック  Medium', meiryo, sans-serif;
 
