--- a/c_team/app/views/shared/_header.html.erb
+++ b/c_team/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%= link_to 'ページトップ', root_path, class: "navbar-brand" %>
 <div class="navbar-collapse collapse navbar-responsive-collapse">
   <ul class="nav navbar-nav">
-    <li><%= link_to 'ステージ', stages_path %></li>
+    <li><%= link_to 'ステージ', title_path %></li>
     <% if current_user %>
     <li><%= link_to current_user.name + 'さん', edit_user_path(current_user) %></li>
     <li><%= link_to '管理画面', :admin_root if current_user.try(:administrator?) %></li>
