--- a/c_team/app/views/stages/intro_novel.html.erb
+++ b/c_team/app/views/stages/intro_novel.html.erb
@@ -10,4 +10,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/intro_novel/intro_novel' %>
 </div>
-<%= form_tag stages_path, id: :intro_novel, method: :get %>
+<%= form_tag title_path, id: :intro_novel, method: :get %>
