--- a/c_team/app/views/stages/tutorial3A_novel.html.erb
+++ b/c_team/app/views/stages/tutorial3A_novel.html.erb
@@ -10,4 +10,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial3A_novel/tutorial3A_novel' %>
 </div>
-<%= form_tag stages_path, id: :tutorial3A_novel, method: :get %>
+<%= form_tag title_path, id: :tutorial3A_novel, method: :get %>
