ステージ１ノベル実装

--- a/c_team/app/views/stages/stage2.html.erb
+++ b/c_team/app/views/stages/stage2.html.erb
@@ -18,4 +18,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/stage2/stage2' %>
 </div>
-<%= form_tag novel3_path, id: :stage2, method: :get %>
+<%= form_tag title_path, id: :stage2, method: :get %>
