--- a/c_team/app/views/stages/stage1.html.erb
+++ b/c_team/app/views/stages/stage1.html.erb
@@ -18,4 +18,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/stage1/stage1' %>
 </div>
-<%= form_tag novel2_path, id: :stage1, method: :get %>
+<%= form_tag stage1_novel_path, id: :stage1, method: :get %>
