新デザイン仮適用

--- a/c_team/app/views/shared/_login_form.html.erb
+++ b/c_team/app/views/shared/_login_form.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <h1>ログイン</h1>
+  <%# <h1>ログイン</h1> %>
   <%= form_tag :login, method: :post do %>
     <div class="form-group">
       <%= text_field_tag 'name', '', class: 'form-control', placeholder: 'ログイン名' %>
