--- a/c_team/app/views/top/index.html.erb
+++ b/c_team/app/views/top/index.html.erb
@@ -1,5 +1,16 @@
 <% @page_title = 'TOP' %>
-
-<div class="page-header">
-  <h1>松永プロジェクト</h1>
+<header>
+  <div class="container">
+    <h4>松永プロジェクト</h4>
+    <h1>Projct C</h1>
+  </div>
+</header>
+<div class="container">
+  <section>
+    <h2>概要</h2>
+    <p>
+      から揚げ
+    </p>
+    <%= link_to 'ログインして始める', login_form_path, class: 'btn btn-primary'%>
+  </section>
 </div>
