--- a/c_team/app/assets/stylesheets/application.scss
+++ b/c_team/app/assets/stylesheets/application.scss
@@ -164,3 +164,23 @@ h3{
   border-left: 15px solid transparent;
 }
 
+body {
+  background-color: #FFF;
+}
+
+header {
+  $header-color: azure;
+  display: flex;
+  height: 250px;
+  background-color: $header-color;
+  text-align: center;
+  border-bottom: 2px solid darken($header-color, 10%);
+  justify-content: center;
+  align-items: center;
+
+  &.v-bottom{
+    height: 150px;
+    margin-bottom: 10px;
+    align-items: flex-end;
+  }
+}
