--- a/c_team/app/views/users/new.html.erb
+++ b/c_team/app/views/users/new.html.erb
@@ -1,9 +1,11 @@
 <% @page_title = 'アカウント登録' %>
-
-<div class="col-md-6 col-md-offset-3">
-  <h1>アカウントの作成</h1>
+<header class="v-bottom">
+  <div class="container">
+    <h1>アカウントの作成</h1>
+  </div>
+</header>
+<div class="col-md-4 col-md-offset-4">
   <%= render 'shared/errors', obj: @user %>
-
   <%= form_for @user do |f| %>
     <%= render 'form', f: f %>
       <%= f.submit 'アカウントを作成する', class: 'btn btn-primary'%>
