ノベル　エンディングまで仮作成

--- a/c_team/app/views/stages/stage2_novel.html.erb
+++ b/c_team/app/views/stages/stage2_novel.html.erb
@@ -8,6 +8,6 @@
 </div>
 
 <div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage1_novel/stage1_novel' %>
+  <%= javascript_include_tag 'stage/stage2_novel/stage2_novel' %>
 </div>
-<%= form_tag stage2_novel_path, id: :stage2_novel, method: :get %>
+<%= form_tag stage2_path, id: :stage2, method: :get %>
