--- a/c_team/app/views/stages/stage3_novel.html.erb
+++ b/c_team/app/views/stages/stage3_novel.html.erb
@@ -8,6 +8,6 @@
 </div>
 
 <div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage1_novel/stage1_novel' %>
+  <%= javascript_include_tag 'stage/stage3_novel/stage3_novel' %>
 </div>
-<%= form_tag stage2_novel_path, id: :stage2_novel, method: :get %>
+<%= form_tag ending_novel_path, id: :ending_novel, method: :get %>
