--- a/c_team/app/views/stages/ending_novel.html.erb
+++ b/c_team/app/views/stages/ending_novel.html.erb
@@ -8,6 +8,6 @@
 </div>
 
 <div id="enchant-stage">
-  <%= javascript_include_tag 'stage/stage1_novel/stage1_novel' %>
+  <%= javascript_include_tag 'stage/ending_novel/ending_novel' %>
 </div>
-<%= form_tag stage2_novel_path, id: :stage2_novel, method: :get %>
+<%= form_tag title_path, id: :title, method: :get %>
