--- a/c_team/app/views/top/index.html.erb
+++ b/c_team/app/views/top/index.html.erb
@@ -2,15 +2,42 @@
 <header>
   <div class="container">
     <h4>松永プロジェクト</h4>
-    <h1>Projct C</h1>
+    <h1>あずきのおみまい</h1>
+<%= link_to 'ゲームを始める', title_path, class: 'start_btn'%>    
   </div>
 </header>
-<div class="container">
+<div class="content">
   <section>
     <h2>概要</h2>
     <p>
-      から揚げ
+      あずきのおみまいは、松永プロジェクトで製作している「P++」のコンテンツの一つで、プログラムの通り動く物語の人物を障害物の配置でゴールへと導くブラウザゲームです。<br>
+      ゴールの仕方によっては、物語の流れが変わるためエンディングが複数あります。エンディングコンプリートを目指しましょう！
     </p>
-    <%= link_to 'ログインして始める', login_form_path, class: 'btn btn-primary'%>
+  </section>
+  <section>
+    <h2>必須動作環境</h2>
+    <p>
+    画面解像度が1366x768以上必要です。
+    それ以下の場合、画面の表示が崩れる場合があります。
+    </p>
+  </section>
+  <section>
+    <h2>動作確認環境</h2>
+    あずきのおみまいは以下の環境で動作確認を行なっています。
+    <h3>OS</h3>
+    <p>
+      Windows 10 Fall Creators Update
+      macOS High Sierra
+    </p>
+    <h3>ブラウザ</h3>
+    <p>
+      GoogleChrome, FireFox, Safari, Edge 各最新版
+    </p>
+    <h3></h3>
+    <p>
+    </p>
+    <h3></h3>
+    <p>
+    </p>
   </section>
 </div>
