動き方の画像適用

--- a/c_team/app/assets/stylesheets/application.scss
+++ b/c_team/app/assets/stylesheets/application.scss
@@ -129,6 +129,12 @@ h3 {
     float: left;
 }
 
+#motion-pic {
+    float: left;
+    object-fit: cover;
+
+}
+
 #enchant-stage {
     width: 85%;
     height: 90vh;
