トップ画像差し替え、その他調整

--- a/c_team/app/assets/stylesheets/application.scss
+++ b/c_team/app/assets/stylesheets/application.scss
@@ -175,7 +175,7 @@ body {
     background-color: #FFF;
 }
 
-$btn-color: rgb(255, 72, 0);
+$btn-color: #00e1ff;
 
 header {
     display: flex;
@@ -186,10 +186,17 @@ header {
     border-bottom: 2px solid $btn-color;
     justify-content: center;
     align-items: center;
+    flex-grow: 0;
     &.v-bottom {
         height: 150px;
         margin-bottom: 10px;
         align-items: flex-end;
+    }
+
+    & .title-b {
+      background-color: #FFF;
+      border-radius: 10px;
+      padding: 20px;
     }
 }
 
@@ -222,6 +229,6 @@ p {
 }
 
 .content {
-  width: 1000px;
+  // width: 1000px;
   margin: auto;
 }
