デバックモード修正, チュートリアル3「動き方」追加

--- a/c_team/app/views/stages/tutorial3.html.erb
+++ b/c_team/app/views/stages/tutorial3.html.erb
@@ -8,6 +8,7 @@
 <div id="motion">
   <div id="puzz">
     <h3>〜動き方〜</h3>
+    <%= image_tag('tutorial2_and_3_motion.png', id: 'motion-pic') %>
   </div>
   <div id="help">
     <h3>〜ヘルプ〜</h3>
