--- a/c_team/app/views/stages/stage3_novel.html.erb
+++ b/c_team/app/views/stages/stage3_novel.html.erb
@@ -10,4 +10,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/stage3_novel/stage3_novel' %>
 </div>
-<%= form_tag ending_novel_path, id: :ending_novel, method: :get %>
+<%= form_tag stage3_path, id: :stage3, method: :get %>
