--- a/c_team/app/views/stages/tutorial3_novel.html.erb
+++ b/c_team/app/views/stages/tutorial3_novel.html.erb
@@ -10,4 +10,4 @@
 <div id="enchant-stage">
   <%= javascript_include_tag 'stage/tutorial3_novel/tutorial3_novel' %>
 </div>
-<%= form_tag tutorial3_path, id: :tutorial3_novel, method: :get %>
+<%= form_tag tutorial3_path, id: :tutorial3, method: :get %>
