チュートリアル1 「ヘルプ」を仮実装

--- a/c_team/app/assets/stylesheets/stages.scss
+++ b/c_team/app/assets/stylesheets/stages.scss
@@ -77,6 +77,11 @@ h3 {
     width: inherit;
 }
 
+#help-pic {
+    margin-top: 10px;
+    margin-left: 30px;
+}
+
 #enchant-stage {
     width: 84%;
     height: 90vh;
