ブラッシュアップ

--- a/c_team/app/views/stages/stage2.html.erb
+++ b/c_team/app/views/stages/stage2.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ2</p>
-  <p id="mis">ミッション：主人公をゴールに届けよう!!</p>
+  <p id="mis">ミッション：1番のバス停から順番に通るようにバスを導こう！！</p>
 <% end %>
 
 <div id="motion">
