--- a/c_team/app/views/stages/stage3.html.erb
+++ b/c_team/app/views/stages/stage3.html.erb
@@ -2,7 +2,7 @@
 
 <% content_for :stage_header do %>
   <p id="story">ステージ3</p>
-  <p id="mis">ミッション：主人公をゴールに届けよう!!</p>
+  <p id="mis">ミッション：ずんだ堂とスーパーに寄って、果物と和菓子を買おう！そして、小豆ちゃんを病院に導こう！！</p>
 <% end %>
 
 <div id="motion">
